--- a/style.css
+++ b/style.css
@@ -17,6 +17,20 @@ body {
 .header {
     background-color:#38bdf8;
     grid-column: 1/3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem 0 1rem;
+}
+
+.title {
+    flex: 0 1 1;
+    display: flex;
+}
+
+.cred {
+    flex: 0 1 1;
+    display:flex;
 }
 
 .sidebar {
