--- a/style.css
+++ b/style.css
@@ -37,6 +37,30 @@ body {
     background-color:#bae6fd;
     grid-row: 2/3;
     grid-column: 2/3;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    flex: 1;
+}
+
+.inptWrapr {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin-bottom: 2px;
+}
+
+input, select, #newB {
+    width: 90%;
 }
 
 .mainContent {
