--- a/style.css
+++ b/style.css
@@ -67,4 +67,16 @@ input, select, #newB {
     background-color:#e0f2fe;
     grid-row:2/3;
     grid-column: 1/2;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.card {
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 5px;
+    padding: 1rem;
 }
